[package]
name = "plasmolauncher-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
hex = "0.4.3"
serde = "1.0.151"
serde_json = "1.0.91"
sha1 = "0.10.5"
tokio = { version = "1.23.0", features = ["full"] }
ts-rs = "6.2.1"
url = { version = "2.3.1", features = ["serde"]}
